vlib/v/checker/tests/orm_aggregate_sum_string_error.vv
import db.sqlite

struct User {
	id   int @[primary]
	name string
}

fn main() {
	db := sqlite.connect(':memory:')!
	_ := sql db {
		select sum(name) from User
	}!
}
